--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -128,10 +128,40 @@
         }
         .news-tab__content__list {
             min-height: 700px;
+            .news-tab__content__sources-list {
+                white-space: nowrap;
+                overflow: hidden;
+                overflow-x: auto;
+                margin-bottom: 16px;
+                box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.2), inset -1px 0px 3px rgba(0, 0, 0, 0.1);
+                li {
+                    text-align: center;
+                    cursor: pointer;
+                    padding-bottom: .5em;
+                    border-right: 1px solid #f5f5f5;
+                    border-bottom: 4px solid transparent;
+                }
+                li:hover {
+                    background: rgba(71, 120, 176, 0.3);
+                }
+                li.active {
+                    background: rgba(71, 120, 176, 0.6);
+                    color: white;
+                    text-align: center;
+                    border-color: rgba(71, 120, 176, 0.4);
+                    border-right: none;
+                }
+                .img-scale {
+                    width: 60px;
+                }
+            }
         }
         .news-tab__content__sortBy {
             text-align: center;
             margin-bottom: 1em;
+            button {
+                text-transform: capitalize;
+            }
         }
         .news-tab__content__card {
             padding-bottom: 1em;
