added deploy script

--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -151,6 +151,9 @@
                     border-color: rgba(71, 120, 176, 0.4);
                     border-right: none;
                 }
+                label{
+                    cursor: pointer;
+                }
                 .img-scale {
                     width: 60px;
                 }
