--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -141,7 +141,7 @@
                 li {
                     text-align: center;
                     cursor: pointer;
-                    padding-bottom: .5em;
+                    padding: .5em 1em .2em;
                     border-right: 1px solid #f5f5f5;
                     border-bottom: 4px solid transparent;
                 }
@@ -157,6 +157,7 @@
                 }
                 label{
                     cursor: pointer;
+                    margin: 0;
                 }
                 .img-scale {
                     width: 60px;
