--- a/src/style/typography.scss
+++ b/src/style/typography.scss
@@ -6,7 +6,7 @@ $serif-font-stack: "PT Serif", Georgia, serif;
 
 h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
   color: $text-color;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -26,7 +26,7 @@ h2 {
 }
 
 h3 {
-  font-size: 2.8rem;
+  font-size: 2rem;
   line-height: 1.3;
 }
 
@@ -52,8 +52,9 @@ h6 {
 
 p {
   margin-top: 0;
-  font-size: 1.8rem;
+  font-size: 1.5rem;
   line-height: 2.6rem;
+  margin-bottom: 1rem;
 }
 
 p.lead {
@@ -70,9 +71,10 @@ p.attribution {
 }
 
 @media (max-width: 550px) {
+  p { font-size: 1.4rem !important; }
   h1 { font-size: 3.6rem; }
   h2 { font-size: 2.8rem; }
-  h3 { font-size: 2.2rem; }
+  h3 { font-size: 1.8rem; }
   h4 { font-size: 1.8rem; }
   h5 { font-size: 2.4rem; }
   h6 { font-size: 1.5rem; }
