--- a/src/index.scss
+++ b/src/index.scss
@@ -1,12 +1,13 @@
 @import 'style/normalize';
 @import 'style/colors';
 @import 'style/buttons';
-@import 'style/forms';
+// @import 'style/forms';
 @import 'style/grid';
 @import 'style/lists';
 @import 'style/tables';
 @import 'style/typography';
 @import 'style/utilities';
+@import 'style/card.scss';
 
 html {
   font-size: 62.5%;
@@ -35,6 +36,10 @@ button,
   margin-bottom: 1rem;
 }
 
+a {
+  text-decoration: none;
+}
+
 input,
 textarea,
 select,
@@ -51,5 +56,5 @@ p,
 ul,
 ol,
 form {
-  margin-bottom: 2.5rem;
+  margin-bottom: 1rem;
 }
