--- a/src/style/grid.scss
+++ b/src/style/grid.scss
@@ -5,7 +5,7 @@
   width: 100%;
   // max-width: 960px;
   margin: 0 auto;
-  padding: 0 20px;
+  // padding: 0 20px;
   box-sizing: border-box;
 }
 
@@ -15,22 +15,22 @@
   float: left;
   box-sizing: border-box;
 }
-@media (min-width: 400px) {
-  .container {
-  //   width: 85%;
-    padding: 0; 
-  }
-}
+// @media (min-width: 400px) {
+//   .container {
+//   //   width: 85%;
+//     padding: 0; 
+//   }
+// }
 
 @media (min-width: 550px) {
-  // .container {
-    // width: 80%;
-  // }
-
-  .column,
-  .columns {
-    margin-left: 4%;
+  .container {
+    width: 90%;
   }
+
+  // .column,
+  // .columns {
+  //   margin-left: 4%;
+  // }
 
   .column:first-child,
   .columns:first-child {
