--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -19,7 +19,7 @@ $alabaster:         #f4f4f4;
 $silver:            #ccc;
 $dust:              #979797;
 $charcoal:          #333;
-$lightgray:         #ddd;
+$lightgray:         #f7f7f7;
 
 // Active UI state color
 $activeBgColor:       lighten(#c3e89c , 10%);
