--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -25,7 +25,7 @@
         min-height: 600px;
         .nhh__content__article-card {
             .nhh-card__content__image {
-                background-color: $activeBgColor;
+                background-color: $lightgray;
                 background-position: center center;
                 background-repeat: no-repeat;
                 background-size: contain;
@@ -53,7 +53,7 @@
         
         .nhh__content__article-card:hover {
             h3 {
-                color: lighten($blue, 15%);
+                color: darken($brand, 15%);
             }
         }
 
