--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -4,7 +4,7 @@
 // =============================================================================
 
 // Brand
-$brand:             #c3e89c;
+$brand:             darken( #c3e89c, 25%);
 $blue:             #0080ff;
 
 // Secondary colors
