--- a/src/style/utilities.scss
+++ b/src/style/utilities.scss
@@ -84,7 +84,7 @@ $default-shadow: 1px 1px 16px rgba($charcoal, .1);
 }
 
 @media screen and (min-width: 599px){
-  .show-md {
+  .hide-md {
     display: none;
   }
 }
