--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -10,7 +10,8 @@
             button {
                 text-transform: capitalize;
             }
-            button.active {
+            button.active,
+            button.active:hover {
                 background: $activeBgColor;
             }
             button:hover {
@@ -34,6 +35,7 @@
             }
             color: black;
             margin-bottom: 1em;
+            width: 100%;
             @media screen and (min-width: 600px) {
                 width: 48%;
                 margin-right: 2%;
@@ -57,5 +59,12 @@
             }
         }
 
+    }
+    .nhh__content__footer {
+        height: 60px;
+        line-height: 64px;
+        @media screen and (max-width: 600px){
+            padding: 0 1em;
+        }
     }
 }
