--- a/src/containers/Home/style.scss
+++ b/src/containers/Home/style.scss
@@ -15,6 +15,7 @@
         height: 60px;
         .brand-name {
             font-size: 2.5rem;
+            cursor: pointer;
             line-height: 60px;
             text-align: center;
             color: darken($brand, 15%);
