--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -21,6 +21,8 @@
                 height: 200px;
                 width: 100%;
             }
+            display: flex;
+            flex-direction: column;
             color: black;
             margin-bottom: 1em;
             width: 100%;
@@ -38,16 +40,20 @@
                 .clearfix {
                     font-size: 1.3rem;
                 }
-                .article-social-share {
-                     button {
-                        font-size: 01em;
-                        padding: 0 10px;
-                        img {
-                            width: 20px;
-                            position: relative;
-                            top: 4px;
-                        }
-                     }
+            }
+            .article-social-share {
+                flex: 1;
+                display: flex;
+                align-items: flex-end;
+                justify-content: center;
+                button {
+                    font-size: 01em;
+                    padding: 0 10px;
+                    img {
+                        width: 20px;
+                        position: relative;
+                        top: 4px;
+                    }
                 }
             }
         }
