--- a/src/style/colors.scss
+++ b/src/style/colors.scss
@@ -5,6 +5,7 @@
 
 // Brand
 $brand:             darken( #c3e89c, 25%);
+$darkBrand: darken(#c3e89c, 30%);
 $blue:             #0080ff;
 
 // Secondary colors
