--- a/src/containers/News/style.scss
+++ b/src/containers/News/style.scss
@@ -46,8 +46,11 @@
                 display: flex;
                 align-items: flex-end;
                 justify-content: center;
+                .btn,
                 button {
                     padding: 0 10px;
+                    margin-bottom: .5em;
+                    margin-right: .5em;
                     img {
                         width: 20px;
                         position: relative;
